--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
 .App {
   text-align: center;
+ 
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.btn{
+  margin: 2px;;
+}
+.divbtn{
+  float: left;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,25 +21,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
